--- a/Cliente/pages/index.html
+++ b/Cliente/pages/index.html
@@ -6,8 +6,11 @@
     <script src="/Scripts/angular.js"></script>
     <script src="/Scripts/angular-resource.js"></script>
     <script src="/Scripts/angular-route.js"></script>
+    <script src="/Scripts/acute.select.js"></script>
     <script src="/Scripts/app.js"> </script>
     <link rel="stylesheet" type="text/css" href="/Content/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/Content/acute.select.css" />
+
 
     <title>Controle Nutricional</title>
 </head>
@@ -19,7 +22,7 @@
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/cadastrar"><i class="fa fa-home"></i> Cadastrar Alimentos</a></li>
-                <li><a href="#about"><i class="fa fa-shield"></i> Refeições</a></li>
+                <li><a href="#/cadastrarRefeicao"><i class="fa fa-shield"></i> Refeições</a></li>
                 <li><a href="#contact"><i class="fa fa-comment"></i> Relatorios</a></li>
                 <li><a href="#contact"><i class="fa fa-comment"></i> LogOut</a></li>
             </ul>
